# awesome-deep-learning-tutorial-for-research-beginner

./: Markdown-Tutorial.md  README.md  readme.md
CNN/: CNN_Template.py  ResNet.py  train_model.py
CNN/models/: cnn_mnist.pth
CPP/: 01_basic_syntax.cpp  02_adavanced_features.cpp  03_basic_dl.cpp  04_advanced_dl.cpp  CMakeLists.txt
CUDA/: CUBLAS-beginner.cu  CUDA-beginner.cu
CUDA/cudnn_samples/conv_sample/: README.txt
LSTM/: GDP_Predict.py  gdp_data.xlsx
MLP/: MLP_Mini_Batch.py  MLP_SGD.py
RNN/: RNN.py
Seq2Seq/: build_vocab.py  dataloader.py  inference.py  main.py  print_pkl_file.py  requirements.txt  seq2seq.py  train.py  utils.py
Seq2Seq/data/: chinese_sentences.txt  english_sentences.txt
Seq2Seq/models/: seq2seq.py
Transformer/: config.py  dataset.py  main.py  model.py  trainer.py  utils.py
latex_tutorial/: latex_tutorial.tex
